changed header color and fixed so that blog title isn't behind authentification

--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -4,9 +4,10 @@ h1 a {
 
 }
 .page-header {
-    background-color: #ff9400;
+    background-color: #054ec4;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
+    height:auto;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
